--- a/frontend/src/css/_base.scss
+++ b/frontend/src/css/_base.scss
@@ -1,7 +1,7 @@
 
 body {
     padding-left: 150px;
-    background-color: #fff;
+    background-color:#acbfcb;
 
     .uniDoc {
         transition: all 0.2s ease-in-out;
@@ -18,9 +18,10 @@ body {
                 .docArticle {
                     width: 100%;
                     grid-column: span 2;
-                    border-radius: 5px;
+                    border-radius: 20px;
                     margin-bottom: 1rem;
-
+                    // border: 2px solid #12171e;
+                    background-color:#fff;
                     .docBody {
                         display: flex;
                         flex-direction: column;
@@ -145,7 +146,7 @@ body {
             border-radius: 20px;
             border: 5px solid #12171e;
             display: block;
-            opacity: 0.8;
+            opacity: 0.9;
         }
     }
 
