--- a/frontend/src/css/_base.scss
+++ b/frontend/src/css/_base.scss
@@ -190,10 +190,21 @@ body {
 					.docCreationDate {
 						background-color: #9fc7ff;
 						max-width: 45%;
-						border-radius: 0 10px 10px 0;
+						// border-radius: 0 10px 10px 0;
 						font-size: 0.8rem;
-						margin-bottom: 5px;
+						padding: 0;
+                        margin: 0;
 					}
+                    .docUpdateDate {
+                        background-color: #5d80f5;
+						max-width: 45%;
+						font-weight: 700;
+                        color: #151616;
+						font-size: 0.8rem;
+						padding: 0;
+                        margin: 0;
+                        align-self: right;
+                    }
 					.deleteCheckBtn,
 					.cancelDeleteBtn {
 						width: 100%;
